--- a/_posts/blog/2019-04-10-birds.md
+++ b/_posts/blog/2019-04-10-birds.md
@@ -3,6 +3,7 @@ title: An Ode to the Forest Birds I Have Loved Most Dearly
 author: rowanvl
 byline: Rowan Van Lare, PhD (Bird-watching)
 description: "Expert Ornithologist Rowan Van Lare weighs in on the age-old question: What are your top five favorite birds?"
+thumbnail: /assets/static1/img/blog/thumbnails/grackle.jpg
 ---
 
 <p style="font-family: cursive">Oh, Grackle, how dost thou shine brightly from thine neck - a rainbow of iridescence against sleek, black down - and why now dost thou go unnoticed? Let me thus hark-</p>
