Added video category overview

--- a/_videocategories/sp16.md
+++ b/_videocategories/sp16.md
@@ -1,9 +1,10 @@
 ---
-title: Spring 2019
+title: Spring 2016
 vids:
   - makingdogcat
   - famous
   - wearethepeppers
   - lifeandtimes
 featured: makingdogcat
+order: 1
 ---
